Adjust drafts file name

--- a/draft-scenarios/metadata.tex
+++ b/draft-scenarios/metadata.tex
@@ -460,12 +460,12 @@
 \vspace*{\fill}
 \columnbreak
 \vspace{-3em}
-\includegraphics[width=\linewidth]{\art/elf.jpg}
+\includegraphics[width=\linewidth]{\art/mummy.jpg}
 \end{multicols*}
 
 \clearpage
 
-\include{scenarios/sentinels.tex}
+% \include{scenarios/your_scenario.tex}
 
 \include{sections/back_cover.tex}
 
