--- a/translations/inferno_deal_with_the_devil.tex/cs.po
+++ b/translations/inferno_deal_with_the_devil.tex/cs.po
@@ -298,7 +298,7 @@ msgid ""
 "This Scenario plays out over 14 Rounds.\n"
 "\n"
 msgstr ""
-"Tento scénář se hraje na 14 kol.\n"
+"Tento Scénář se hraje na 14 Kol.\n"
 "\n"
 
 #. type: multicols*
@@ -592,7 +592,7 @@ msgid ""
 "Place your Hero on the center Field of the S6 Inferno Starting Map Tile.\n"
 "\n"
 msgstr ""
-"Umístěte vašeho Hrdinu na středové pole Startovního Dílku S6 vaší Frakce.\n"
+"Umístěte vašeho Hrdinu na středové Pole Startovního Dílku S6 vaší Frakce.\n"
 "\n"
 
 #. type: multicols*
@@ -894,7 +894,7 @@ msgstr ""
 "  \\item Váš Hlavní Hrdina může cestovat pouze na Dílky Mapy Peklo. Nemůžete vstoupit na žádný jiný typ Dílku Mapy.\n"
 "  \\item Nemůžete útočit na Nepřátelské Útočící Hrdiny. Můžete se pouze bránit proti nim, pokud jste uvnitř Kleesivu.\n"
 "  \\item Získáte 3 \\svg{gold}, když porazíte Armádu Útočícího Hrdiny.\n"
-"  \\item Pokud Nepřátelský Útočící Hrdina vstoupí na Dílek Mapy nebo pole, na kterém je váš Hlavní Hrdina (výjimkou je, pokud jste ve\n"
+"  \\item Pokud Nepřátelský Útočící Hrdina vstoupí na Dílek Mapy nebo Pole, na kterém je váš Hlavní Hrdina (výjimkou je, pokud jste ve\n"
 "    svém městě Kleesiv), nebo pokud útočí na Kleesiv a vy nejste přítomni ve svém městě\n"
 "    Kleesiv, budete okamžitě přeneseni zpět do Kleesivu, ztratíte zbývající Pohybové Body,\n"
 "    ztratíte 3 \\svg{gold}, získáte \\svg{morale_negative} a náhodně odhodíte 1 kartu z ruky.\n"
