--- a/translations/sentinels.tex/cs.po
+++ b/translations/sentinels.tex/cs.po
@@ -101,7 +101,7 @@ msgid ""
 "This Scenario is played over 12 Rounds.\n"
 "\n"
 msgstr ""
-"Tento scénář se hraje na 12 kol.\n"
+"Tento Scénář se hraje na 12 Kol.\n"
 "\n"
 
 #. type: multicols*
@@ -535,7 +535,7 @@ msgid ""
 msgstr ""
 "\\begin{itemize}\n"
 "  \\item Nepřátelské armády se objevují na náhodném poli s Obeliskem (použijte miniatury Hrdinů z frakcí, které nejsou ve hře).\n"
-"  \\item Určete pole s Obeliskem tím, že hodíte 2 Kostkami Útoku. Aplikujte výsledky následujícím způsobem (K1/K2), při 0 hážete znovu:\n"
+"  \\item Určete Pole s Obeliskem tím, že hodíte 2 Kostkami Útoku. Aplikujte výsledky následujícím způsobem (K1/K2), při 0 hážete znovu:\n"
 "  \\begin{itemize}\n"
 "    \\item $+1$/$+1$ = Sever\n"
 "    \\item $+1$/$-1$ = Východ\n"
@@ -549,7 +549,7 @@ msgstr ""
 "  \\item Nepřátelské armády se pohybují na konci každého tahu, počínaje tahem, kdy se objevily.\n"
 "  \\item Nepřátelské armády mají 3 MP za kolo.\n"
 "  \\item Nepřátelské armády se pohybují, jak je popsáno v pravidlech (str.\\,33), ale místo obsazování ničí vše, co jim stojí v cestě.\n"
-"    Umístěte černé kostky na jakékoliv pole, kterým projdou, a od toho okamžiku považujte tato pole za prázdná.\n"
+"    Umístěte černé kostky na jakékoliv Pole, kterým projdou, a od toho okamžiku považujte tato Pole za prázdná.\n"
 "  \\item Pokud by se nepřátelský pohyb mohl ubírat různými směry, hráči rozhodnou, kterým směrem půjdou.\n"
 "\\end{itemize}\n"
 "\n"
