--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -182,7 +182,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Délka Scénáře}}\n"
-"Tento scénář se hraje na 12 kol.\n"
+"Tento Scénář se hraje na 12 Kol.\n"
 "\n"
 
 #. type: multicols*
@@ -416,7 +416,7 @@ msgstr ""
 "  \\item Hrdinové nemohou ustoupit z bitev s Dračím Bossem.\n"
 "  \\item Když každý hráč navštíví Obelisk, může si vybrat, zda hodí Kostkou Pokladu nebo získá 1 \\svg{experience}.\n"
 "  \\item Hráči mohou každý Obelisk navštívit pouze jednou.\n"
-"    Poté musí na pole umístit svou frakční kostku.\n"
+"    Poté musí na Pole umístit svou frakční kostku.\n"
 "  \\item V setkání s bossem není žádný limit bojových kol.\n"
 "\\end{itemize}\n"
 "\n"
@@ -760,9 +760,9 @@ msgstr ""
 "schopnost kontroly davu, která mu umožňuje vypustit čtyři kaluže sirné "
 "kyseliny na bojiště \\textit{na začátku} každého bojového kola. Použijte "
 "karty balíčku M\\&M umístěné lícem dolů k označení jejich poloh. \\item "
-"Rezavý Drak nemůže umístit kaluže na stejná pole jako v předchozím kole. "
-"Označte pole náhradními frakčními kostkami, abyste označili, kde byly kaluže "
-"umístěny. \\item Kaluže sirné kyseliny blokují pole bojiště a brání pohybu "
+"Rezavý Drak nemůže umístit kaluže na stejná Pole jako v předchozím kole. "
+"Označte Pole náhradními frakčními kostkami, abyste označili, kde byly kaluže "
+"umístěny. \\item Kaluže sirné kyseliny blokují Pole bojiště a brání pohybu "
 "pouze na jedno kolo. Slouží jako překážky jak pro hráče, tak pro Draka. "
 "\\item Pasivní schopnost Rezavého Draka, \\textit{Koroze}, snižuje brnění "
 "nepřátelské jednotky o 2 při každém útoku. Na kartu jednotky umístěte "
