--- a/translations/the_hunt.tex/cs.po
+++ b/translations/the_hunt.tex/cs.po
@@ -416,7 +416,7 @@ msgstr ""
 "  \\item Hrdinové nemohou ustoupit z bitev s Dračím Bossem.\n"
 "  \\item Když každý hráč navštíví Obelisk, může si vybrat, zda hodí Kostkou Pokladu nebo získá 1 \\svg{experience}.\n"
 "  \\item Hráči mohou každý Obelisk navštívit pouze jednou.\n"
-"    Poté musí na Pole umístit svou frakční kostku.\n"
+"    Poté musí na Pole umístit svou Kostičku Frakce.\n"
 "  \\item V setkání s bossem není žádný limit bojových kol.\n"
 "\\end{itemize}\n"
 "\n"
@@ -519,7 +519,7 @@ msgstr ""
 "který zasáhne tři Jednotky v řadě. Jednotka přímo zasažená uprostřed utrpí "
 "plné poškození, zatímco jednotky po obou stranách utrpí o 3\\,\\svg{damage-"
 "red} méně. \\item Kus brnění, štítu nebo oblečení: Drak získá 3\\,"
-"\\svg{defense}, což je znázorněno náhradními frakčními kostkami. Odstraňte "
+"\\svg{defense}, což je znázorněno náhradními Kostičkami Frakce. Odstraňte "
 "je poté, co absorbují poškození. \\item Cetka: Azurový Drak zařve a přivolá "
 "ledovou bouři, která způsobí, že všechny bytosti zamrznou strachem. To má za "
 "následek, že každá jednotka se pohybuje pouze o 1 bojový dílek za kolo, "
@@ -761,12 +761,12 @@ msgstr ""
 "kyseliny na bojiště \\textit{na začátku} každého bojového kola. Použijte "
 "karty balíčku M\\&M umístěné lícem dolů k označení jejich poloh. \\item "
 "Rezavý Drak nemůže umístit kaluže na stejná Pole jako v předchozím kole. "
-"Označte Pole náhradními frakčními kostkami, abyste označili, kde byly kaluže "
+"Označte Pole náhradními Kostičkami Frakce, abyste označili, kde byly kaluže "
 "umístěny. \\item Kaluže sirné kyseliny blokují Pole bojiště a brání pohybu "
 "pouze na jedno kolo. Slouží jako překážky jak pro hráče, tak pro Draka. "
 "\\item Pasivní schopnost Rezavého Draka, \\textit{Koroze}, snižuje brnění "
 "nepřátelské jednotky o 2 při každém útoku. Na kartu jednotky umístěte "
-"náhradní frakční kostku, abyste označili tento efekt. Koroze se kumuluje až "
+"náhradní Kostičku Frakce, abyste označili tento efekt. Koroze se kumuluje až "
 "do -4 \\svg{defense}. \\end{itemize} }"
 
 #. type: Plain text
