--- a/translations/bloody_grail.tex/cs.po
+++ b/translations/bloody_grail.tex/cs.po
@@ -301,7 +301,7 @@ msgid ""
 "\n"
 msgstr ""
 "\\subsection*{\\MakeUppercase{Podmínky Vítězství}}\n"
-"Aby Hrdina vyhrál scénář, musí získat žeton Grálu a přinést jej do Města své frakce.\n"
+"Aby Hrdina vyhrál scénář, musí získat žeton Grálu a přinést jej do Města své Frakce.\n"
 "\n"
 
 #. type: multicols*
@@ -330,7 +330,7 @@ msgid ""
 "If the Grail Token has been obtained, the players gain additional time (until the end of the \\nth{16} Round) to bring the Grail to their Faction's Town. Otherwise, all players lose the Scenario.\n"
 "\n"
 msgstr ""
-"Pokud byl žeton Grálu získán, hráči získají dodatečný čas (do konce 16. kola) na to, aby přinesli Grál do Města své frakce. V opačném případě všichni hráči prohrávají tento scénář.\n"
+"Pokud byl žeton Grálu získán, hráči získají dodatečný čas (do konce 16. kola) na to, aby přinesli Grál do Města své Frakce. V opačném případě všichni hráči prohrávají tento scénář.\n"
 "\n"
 
 #. type: multicols*
@@ -492,32 +492,32 @@ msgstr ""
 "      \\item \\textbf{[3. Obelisk]} Získáte Vedlejšího Hrdinu. Umístěte jeho model na toto Pole. Pokud již Vedlejšího Hrdinu máte, získejte místo toho 3 \\svg{gold}. Poté vyberte jednoho nepřátelského hráče, aby odhodil 2 náhodné karty ze své ruky.\n"
 "      \\item \\textbf{[4. Obelisk]} Odstraňte až 4 karty ze své ruky, s výjimkou Karet Statistik; poté vyhledejte v každém odpovídajícím balíčku kartu dle vašeho výběru a vložte ji do své ruky.\n"
 "    \\end{enumerate}\n"
-"    \\item \\textbf{[Oběť]} Odstraňte kartu Jednotky své frakce z vašeho balíčku Jednotek výměnou za:\n"
+"    \\item \\textbf{[Oběť]} Odstraňte kartu Jednotky své Frakce z vašeho balíčku Jednotek výměnou za:\n"
 "    \\begin{enumerate}\n"
 "      \\item *\\svgunit{bronze}: Získejte 6 \\svg{gold}, 3 \\svg{building_materials}, a 1 \\svg{valuables}. Navíc, pokud byla karta Jednotky na straně Skupiny, \\textbf{Hledejte (4)} v balíčku Menších Artefaktů.\n"
 "      \\item *\\svgunit{silver}: Získejte 12 \\svg{gold}, 6 \\svg{building_materials}, a 2 \\svg{valuables}. Navíc, pokud byla karta Jednotky na straně Skupiny, \\textbf{Hledejte (3)} v balíčku Větších Artefaktů.\n"
 "      \\item *\\svgunit{golden}: Získejte 18 \\svg{gold}, 9 \\svg{building_materials}, a 3 \\svg{valuables}. Navíc, \\textbf{Hledejte (2)} v balíčku karet Relikvií. A nakonec, pokud byla karta Jednotky na straně Skupiny, \\textbf{Hledejte (2)} v balíčku \\svgunit{azure} Jednotek; můžete Naverbovat jednu z těchto Jednotek za poloviční cenu (zaokrouhleno dolů).\n"
 "    \\end{enumerate}\n"
 "  \\end{enumerate}\n"
-"  \\item Hráč, který si zvolí \\textbf{Oběť} u Obelisku, získá titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}. Umístěte červenou frakční kostku na portrét jejich Hrdiny, aby byl tento efekt označen. \\textcolor{darkcandyapplered}{Krvavý Rytíř} nikdy nesmí zvolit možnost \\textbf{Očištění} při Navštěvování Obelisku.\n"
-"  \\item Hráč, který si zvolí \\textbf{Očištění} u Obelisku, získá titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}.} Umístěte modrou frakční kostku na portrét jejich Hrdiny, aby byl tento efekt označen. \\uv{\\textcolor{cobalt}{Rytíř Grálu}} nikdy nesmí zvolit možnost \\textbf{Oběť} při Navštěvování Obelisku.\n"
-"  \\item Když hráč zvolí \\textbf{Oběť} u Obelisku, umístěte počet frakčních kostek na obětovanou kartu Jednotky a na Pole Obelisku ekvivalentní počtu, kolikrát hráč zvolil možnost \\textbf{Oběť}. Například, pokud hráč obětuje podruhé, umístěte 2 frakční kostky na kartu Jednotky a 2 frakční kostky na Pole Obelisku.\n"
+"  \\item Hráč, který si zvolí \\textbf{Oběť} u Obelisku, získá titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}. Umístěte červenou Kostičku Frakce na portrét jejich Hrdiny, aby byl tento efekt označen. \\textcolor{darkcandyapplered}{Krvavý Rytíř} nikdy nesmí zvolit možnost \\textbf{Očištění} při Navštěvování Obelisku.\n"
+"  \\item Hráč, který si zvolí \\textbf{Očištění} u Obelisku, získá titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}.} Umístěte modrou Kostičku Frakce na portrét jejich Hrdiny, aby byl tento efekt označen. \\uv{\\textcolor{cobalt}{Rytíř Grálu}} nikdy nesmí zvolit možnost \\textbf{Oběť} při Navštěvování Obelisku.\n"
+"  \\item Když hráč zvolí \\textbf{Oběť} u Obelisku, umístěte počet Kostiček Frakce na obětovanou kartu Jednotky a na Pole Obelisku ekvivalentní počtu, kolikrát hráč zvolil možnost \\textbf{Oběť}. Například, pokud hráč obětuje podruhé, umístěte 2 Kostičky Frakce na kartu Jednotky a 2 Kostičky Frakce na Pole Obelisku.\n"
 "  \\item Hráč, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, může po Navštívení Obelisku naverbovat nepřátelskou Jednotku obětovanou u tohoto Obelisku za poloviční cenu (zaokrouhleno dolů); pokud byla obětována Skupina, hráč může místo toho zvolit naverbovat Málo.\n"
 "  \\item Pokud je Jednotka naverbovaná u Obelisku poražena, Odstraňte ji.\n"
 "  \\item Hráč, který nemá žádný titul nebo má titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, nemůže použít kartu Dovednosti Diplomacie. Pokud hráč, který nemá žádný titul nebo má titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, vytáhne kartu Dovednosti Diplomacie, může ji ukázat ostatním hráčům, poté ji odhodit a místo ní si vzít novou kartu Dovednosti.\n"
 "  \\item Hráč, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, nemůže použít kartu Dovednosti Diplomacie k Naverbování Neutrálních \\svgunit{azure} Jednotek.\n"
 "  \\item Kdykoli je vytažena karta Prohlášení Astrologů nebo karta Události, která umožňuje Naverbování Neutrálních Jednotek, ignorujte ji a vytáhněte kartu novou.\n"
-"  \\item Hráči mohou použít svůj Balíček Síly a Magie při placení zlata na obranu městské oblasti své frakce.\n"
+"  \\item Hráči mohou použít svůj Balíček Síly a Magie při placení zlata na obranu městské oblasti své Frakce.\n"
 "  \\item Ignorujte střety v Boji na poli s Grálem.\n"
 "  \\item Hráči nemohou Navštívit Pole se žetonem Grálu, dokud již nenavštívili alespoň dva Obelisky nebo žeton Grálu nebyl získán jakýmkoli Hrdinou alespoň jednou.\n"
 "  \\item Aby hráč získal žeton Grálu, musí jeho Hrdina zaplatit 2 MP na poli s Grálem.\n"
-"  \\item Pokud hráč nemá titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, musí okamžitě po získání žetonu Grálu odstranit kartu Jednotky své frakce z balíčku Jednotek. Tento efekt může nastat pouze jednou na hráče.\n"
+"  \\item Pokud hráč nemá titul \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, musí okamžitě po získání žetonu Grálu odstranit kartu Jednotky své Frakce z balíčku Jednotek. Tento efekt může nastat pouze jednou na hráče.\n"
 "  \\item Pokud jiný Hrdina porazí Hrdinu s žetonem Grálu, také získá žeton Grálu.\n"
 "  \\item Pokud se Hrdina s žetonem Grálu vzdá, žeton Grálu je umístěn na Pole, kde se Hrdina vzdal.\n"
 "  \\item Pokud Neutrální armáda porazí Hrdinu s žetonem Grálu, žeton Grálu je umístěn na Pole, kde byl Hrdina poražen.\n"
-"  \\item Pokud Hrdina s žetonem Grálu vyvolá Městský Portál nebo použije budovu Hradní Brána frakce Peklo, žeton Grálu je umístěn na Pole, kde byl vyvolán kouzlo nebo použita budova.\n"
+"  \\item Pokud Hrdina s žetonem Grálu vyvolá Městský Portál nebo použije budovu Hradní Brána Frakce Peklo, žeton Grálu je umístěn na Pole, kde byl vyvolán kouzlo nebo použita budova.\n"
 "  \\item Žeton Grálu se chová jako Trvalá karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého Boje, pokud je Hrdina \\uv{\\textcolor{darkcandyapplered}{Krvavý Rytíř}}, odhoďte kartu, abyste odstranili až 2 \\svg{damage-red} z vašich jednotek a přidělili je nepřátelským jednotkám.}\n"
-"  \\item Hrdina s žetonem Grálu, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu},} může zaplatit 10 \\svg{gold} nebo 3 \\svg{valuables} na jakémkoli místě chrámové mapy, aby očistil Grál. Umístěte modrou frakční kostku na žeton Grálu, aby byl tento efekt označen.\n"
+"  \\item Hrdina s žetonem Grálu, který má titul \\uv{\\textcolor{cobalt}{Rytíř Grálu},} může zaplatit 10 \\svg{gold} nebo 3 \\svg{valuables} na jakémkoli místě chrámové mapy, aby očistil Grál. Umístěte modrou Kostičku Frakce na žeton Grálu, aby byl tento efekt označen.\n"
 "  \\item Jakmile je Grál očištěn, žeton Grálu se chová jako Trvalá karta, která se nezapočítává do limitu karet na ruce a nemůže být odhozena; při hraní poskytuje následující efekt: \\uv{$\\infty$ Jednou během každého kola Boje, pokud je Hrdina \\uv{\\textcolor{cobalt}{Rytíř Grálu}}, odhoďte kartu, abyste odstranili až 2 \\svg{damage-red} z vašich jednotek.}\n"
 "\\end{itemize}\n"
 "\n"
